fix(josh-will): apply dark beige color to FAQ answer text
FAQ answer paragraphs inherit warm cream (#fbe7c1) and are unreadable
on white background. Apply $color-text (#c9ad85) consistently with
other text-on-white elements. Archive change + sync spec.

--- a/css/_josh-will-airport-transfers.sass
+++ b/css/_josh-will-airport-transfers.sass
@@ -311,6 +311,9 @@ header.josh-will
             h3
                 color: $color-white !important
 
+        .question p
+            color: $color-text
+
     @media screen and (max-width: 900px)
 
         .cards.transport
